[package]
name = "profile"
version = "0.0.0"
description = "TBD"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.57"

[lib]
doctest = false

[dependencies]
once_cell = "1.10.0"
cfg-if = "1.0.0"
libc = "0.2.121"
la-arena = "0.2.1"
countme = { version = "3.0.1", features = ["enable"] }
jemalloc-ctl = { version = "0.4.2", package = "tikv-jemalloc-ctl", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
perf-event = "0.4.7"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi", "psapi"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.4.3", package = "tikv-jemallocator", optional = true }

[features]
cpu_profiler = []
jemalloc = ["jemalloc-ctl"]
# Uncomment to enable for the whole crate graph
default = [ "jemalloc" ,"jemallocator"]
