[package]
name = "profile"
version = "0.0.0"
description = "TBD"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.57"

[lib]
doctest = false

[dependencies]
once_cell = "1.10.0"
cfg-if = "1.0.0"
libc = "0.2.121"
la-arena = "0.2.1"
countme = { version = "3.0.1", features = ["enable"] }
jemalloc-ctl = { version = "0.4.2", package = "tikv-jemalloc-ctl", optional = true }
jemallocator = { version = "0.4.3", package = "tikv-jemallocator", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
perf-event = "0.4.7"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi", "psapi"] }

[features]
cpu_profiler = []
jemalloc = ["jemalloc-ctl"]
jemallocator = ["dep:jemallocator"]
# Uncomment to enable for the whole crate graph
default = [ "jemalloc" ,"jemallocator"]
